--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Звонок с сайта</title>
+    <title>Р—РІРѕРЅРѕРє СЃ СЃР°Р№С‚Р°</title>
 </head>
 <body>
     <div class="container">
-        <h1>Позвоните нам!</h1>
-        <a href="tel:+77077950013" class="phone-btn">Позвонить</a>
+        <h1>РџРѕР·РІРѕРЅРёС‚Рµ РЅР°Рј!</h1>
+        <a href="tel:+77077950013" class="phone-btn">РџРѕР·РІРѕРЅРёС‚СЊ</a>
     </div>
 
     <style>
